<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#aacdf5"
    tools:context="com.example.hazem.draduation.MainActivity">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_frist_act"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="20dp"
        android:textSize="25sp"
        android:textColor="#000"
        android:layout_marginRight="20dp"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="30dp"

        >
        <RadioButton android:id="@+id/radio_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_time"
            android:textColor="#0a57c4"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_sport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0a57c4"
            android:text="@string/choose_sport"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0a57c4"
            android:text="@string/choose_life"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0a57c4"
            android:text="@string/choose_love"
            android:textSize="24sp"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/btntxt"
         android:layout_gravity="center"
         android:id="@+id/BTgo"
         />
    <com.google.android.gms.ads.AdView
        android:id="@+id/adMob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"

        ads:adSize="BANNER"
        ads:adUnitId="@string/adid"
        android:layout_marginLeft="20dp">
    </com.google.android.gms.ads.AdView>
</LinearLayout>
