<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hazem.draduation.BookDetail"
    android:background="#40b7e2"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#40b7e2"
      android:orientation="vertical"
      >
      <TextView
          android:id="@+id/TV_Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:gravity="center_horizontal"
          android:textColor="#FFFFFF"
          android:textSize="20sp"
          android:textStyle="bold" />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:orientation="horizontal"

          >

          <ImageView
              android:id="@+id/IM_poster"
              android:layout_width="150dp"
              android:layout_height="150dp"
              android:layout_marginLeft="10dp"
              android:layout_marginStart="10dp"
              android:layout_marginTop="10dp"
              android:src="@mipmap/ic_launcher"
              tools:ignore="ContentDescription"
              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dp"
              android:orientation="vertical">


              <TextView
                  android:id="@+id/Tv_year"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:textColor="#805050"
                  android:textSize="35sp" />
              <TextView
                  android:id="@+id/Tv_rate"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:textColor="#805050"
                  android:textSize="35sp" />

              <Button
                  android:id="@+id/Baddfav"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginEnd="10dp"
                  android:layout_marginStart="10dp"
                  android:layout_marginTop="10dp"
                  android:text="@string/btnfav" />

          </LinearLayout>
      </LinearLayout>
      <TextView
          android:id="@+id/TV_publisher"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:text="@string/publisher"
          android:textSize="20sp" />
      <TextView
          android:id="@+id/TV_describtion"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:layout_marginStart="10dp"
          android:layout_marginTop="10dp"
          android:text="@string/description"
          android:textSize="20sp" />


  </LinearLayout>
</ScrollView>
